# 2025Fall-8650

./: README.md  binary-search.ipynb  demo-numbers.ipynb  demo-stack.ipynb  environment.yml
01_threads_hello/: CMakeLists.txt
02_threads_race/: CMakeLists.txt
03_threads_mutex/: CMakeLists.txt
04_threads_atomics/: CMakeLists.txt
arrays/: python-list-layout.ipynb
cpp-intro/: CMakeLists.txt  intro.cpp
cpp-matrix-speed/: CMakeLists.txt  matrix-speed.cpp
cpp-templates/: CMakeLists.txt
matrix-demo/: matrix-demo.cpp
mpi-scaling/: CMakeLists.txt  main.cc
polymorphism/: oo-and-testing.ipynb
recursion/: CMakeLists.txt  iteration-and-recursion.ipynb  recurse.cc
simd/: CMakeLists.txt  simd.cpp  timer.h
