CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
SET (TARGET main)

PROJECT (${TARGET})
ADD_EXECUTABLE (${TARGET} ${TARGET}.cc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF (COMPILER_SUPPORTS_CXX11)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSE()
    MESSAGE(ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
ENDIF()

CHECK_CXX_COMPILER_FLAG("-pthread" COMPILER_SUPPORTS_THREADS)
IF (COMPILER_SUPPORTS_THREADS)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
ELSE()
    MESSAGE(WARNING "The compiler ${CMAKE_CXX_COMPILER} has no threading support.")
ENDIF()
